# bbclaw

./: .air.toml  .env.example  .env.home  .env.home.example  .gitignore  3DShellV1.3mf  3DShellV1_1.47_L.3mf  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  go.mod
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: firmware-release.yml  release-adapter.yml  release.yml
adapter/: .env.example  .gitignore  Makefile  README.md  go.mod
adapter/scripts/: release_build.sh  sync_env.py
assets/: 3DShellV1.3mf
assets/logos/: README.md
cmd/bbclaw-adapter/: main.go  main_test.go
cmd/bbclaw-home-adapter/: main.go
design/: AGENT_STATE_MACHINE.md  README.md  STATE_MACHINE.md  agent_bus.md  device_config_sync.md  firmware_agent_integration.md  miyu_feature_example.md  multi_session_management.md  release_verification.md
design/decisions/: ADR-001-adapter-as-agent-bus.md  ADR-002-multi-turn-session-lifecycle.md  ADR-003-router-and-multi-driver.md  ADR-004-cloud-agent-proxy.md  ADR-005-openclaw-as-driver.md  ADR-006-flipper-full-nav-events.md  ADR-007-standalone-settings-overlay.md  ADR-008-chat-as-standby-and-idle-exit.md  ADR-009-agent-state-machine.md  ADR-010-per-device-agentdriver-cloud-config.md  ADR-011-adapter-open-source.md  ADR-012-fixed-page-menu.md  ADR-013-session-history-replay.md  ADR-014-logical-session-abstraction.md  README.md
docs/: automated_issue_agent.md  bbclaw-bilibili-shop-detail.html  beta_roadmap.md  cloud_saas_architecture.md  cloud_v1_architecture.md  docs-manifest.json  hardware_bom.md  openclaw_integration_plan.md  protocol_specs.md  protocol_specs_v1.md  saas_platform_architecture.md  user_guide.md
docs/architecture/: architecture.md
docs/getting-started/: user_guide.md
docs/hardware/: inmp441.md
docs/skills/: bbclaw-adapter-external-install.md
docs/technical/: ai_tool_call_display.md  local_asr_setup.md  protocol_specs.md
firmware/: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  partitions_bbclaw.csv  partitions_ota.csv  sdkconfig.defaults  sdkconfig.defaults.bread  sdkconfig.local.home
firmware/docs/: audio_playback_debug.md  audio_playback_postmortem.md  bbclaw_adapter_integration.md  display_chinese_and_navigation.md  figma_lvgl_workflow.md  hardware_selection.md  lvgl_font_subset_chars.txt  lvgl_landscape_ui_spec.md  lvgl_limezu_mascots.md  lvgl_macos_simulator.md  openclaw_gateway_ws_reference.md  pin_map.md  rgb_led_status.md  state_machine.md  ui_assets.md
firmware/include/: bb_adapter_client.h  bb_agent_client.h  bb_agent_theme.h  bb_audio.h  bb_button_test.h  bb_cloud_client.h  bb_config.h  bb_device_config.h  bb_display.h  bb_gateway_node.h  bb_identity.h  bb_led.h  bb_lvgl_assets.h  bb_motor.h  bb_nav_input.h  bb_ogg_opus.h  (+17 more)
firmware/simulator/: CMakeLists.txt  README.md  bb_time_stub.c  bb_wifi_stub.c  esp_err.h  lv_conf.h  main.c
firmware/src/: CMakeLists.txt  Kconfig.projbuild  bb_adapter_client.c  bb_agent_client.c  bb_agent_theme.c  bb_audio.c  bb_button_test.c  bb_cloud_client.c  bb_device_config.c  bb_display_bitmap.c  bb_gateway_node.c  bb_identity.c  bb_led.c  bb_lvgl_assets.c  bb_lvgl_display.c  bb_lvgl_img_elements.c  bb_lvgl_img_elements.h  bb_motor.c  bb_nav_input.c  bb_notification.c  bb_ogg_opus.cpp  bb_ota.c  bb_ota.h  bb_panel.c  bb_power.c  bb_ptt.c  bb_radio_app.c  bb_session_store.c  bb_state.c  bb_theme_buddy_anim.c  bb_theme_buddy_ascii.c  bb_theme_text_only.c  bb_time.c  bb_transport.c  bb_ui_agent_chat.c  bb_ui_assets.c  bb_ui_settings.c  bb_wifi.c  bb_xl9555.c  idf_component.yml  (+1 more)
scripts/: bbclaw_adapter_e2e.sh  bbclaw_adapter_smoke.sh  bbclaw_test_client.js  install-adapter.ps1  install-adapter.sh  mock_upstream.py  release_build.sh  tts_adapter_smoke.sh
(+145 files in other folders)
